# openenclave

./: .gitmodules
enclave/core/: tracee.c
include/openenclave/: tracee.h
samples/add/: CMakeLists.txt  add.edl  client.cpp  mig.h
samples/add/enclave/: CMakeLists.txt  add.conf  enc.c  enc.cpp  functions.h
samples/add/host/: CMakeLists.txt  host.c  host.cpp  host_custom.h
samples/log_callback/: log_callback.edl
samples/log_callback/enclave/: enc.c
samples/log_callback/host/: host.c
